--- a/lead-acid.html
+++ b/lead-acid.html
@@ -72,7 +72,7 @@
       </div>
     </div>  
 <div class="flip-card-container">
-  <div class="flip-card">
+  <div class="flip-card" onclick="this.classList.toggle('flipped')">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <h3>Electric Vehicles</h3>
