--- a/lithium-ion.html
+++ b/lithium-ion.html
@@ -76,7 +76,7 @@
       </div>
     </div>  
 <div class="flip-card-container">
-  <div class="flip-card">
+  <div class="flip-card" onclick="this.classList.toggle('flipped')">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <h3>Electric Vehicles</h3>
@@ -92,10 +92,10 @@
       </div>
     </div>
   </div>
-  <div class="flip-card">
+  <div class="flip-card" onclick="this.classList.toggle('flipped')">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <h3>SSmartphones</h3>
+        <h3>Smartphones</h3>
         <p>Click or hover</p>
       </div>
       <div class="flip-card-back">
@@ -109,7 +109,7 @@
     </div>
   </div>
 
-  <div class="flip-card">
+  <div class="flip-card" onclick="this.classList.toggle('flipped')">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <h3>Laptops</h3>
@@ -126,7 +126,7 @@
     </div>
   </div>
 
-  <div class="flip-card">
+  <div class="flip-card" onclick="this.classList.toggle('flipped')">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <h3>Power Tools</h3>
