--- a/capacitor.html
+++ b/capacitor.html
@@ -88,7 +88,7 @@
       </div>
     </div>
   </div>
-  <div class="flip-card">
+  <div class="flip-card" onclick="this.classList.toggle('flipped')">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <h3>Power Grid Stabilization</h3>
@@ -105,7 +105,7 @@
     </div>
   </div>
 
-  <div class="flip-card">
+  <div class="flip-card" onclick="this.classList.toggle('flipped')">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <h3>Start-Stop Systems</h3>
@@ -122,7 +122,7 @@
     </div>
   </div>
 
-  <div class="flip-card">
+  <div class="flip-card" onclick="this.classList.toggle('flipped')">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <h3>Electronics</h3>
