--- a/lithium-iron.html
+++ b/lithium-iron.html
@@ -72,7 +72,7 @@
       </div>
     </div>  
 <div class="flip-card-container">
-  <div class="flip-card">
+  <div class="flip-card" onclick="this.classList.toggle('flipped')">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <h3>Electric Vehicles</h3>
@@ -88,7 +88,7 @@
       </div>
     </div>
   </div>
-  <div class="flip-card">
+  <div class="flip-card" onclick="this.classList.toggle('flipped')">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <h3>Solar Energy Storage</h3>
@@ -105,7 +105,7 @@
     </div>
   </div>
 
-  <div class="flip-card">
+  <div class="flip-card" onclick="this.classList.toggle('flipped')">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <h3>Home & RV Batteries</h3>
@@ -122,7 +122,7 @@
     </div>
   </div>
 
-  <div class="flip-card">
+  <div class="flip-card" onclick="this.classList.toggle('flipped')">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <h3>Electic Scooters & Bikes</h3>
